<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/img_hidangan"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:paddingEnd="16dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    tools:text="@string/heroes_name" />

                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_item_rupiah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:textSize="24sp"
                        android:textColor="@color/orange"
                        tools:text="@string/rupiah" />
                    <TextView
                        android:id="@+id/tv_item_harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:textSize="24sp"
                        android:textColor="@color/red"
                        tools:text="@string/ceban" />
                    </LinearLayout>


                <TextView
                    android:id="@+id/tv_item_ket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="16dp"
                    android:textStyle="italic"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    tools:text="Keterangan" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    >
                    <Button
                        android:id="@+id/btn_set_favorite"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="faveBtn"
                        android:text="@string/favorite"
                        android:textSize="12sp" />
                    <Button
                        android:id="@+id/btn_set_share"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="shareBtn"
                        android:layout_weight="1"
                        android:text="@string/share"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/teal_10"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="3dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_item_pesan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:text="34"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:paddingEnd="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:text="Pesanan"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="3dp"

                >
                <TextView
                    android:id="@+id/tv_item_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:text="10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:paddingEnd="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:text="Share"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="3dp"
                >
                <TextView
                    android:id="@+id/tv_item_fave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:text="76"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:paddingEnd="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:text="Favorite"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="@string/detail" />

        <Button
            android:id="@+id/btn_set_pesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:onClick="pesanBtn"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/pesan"
            />

    </LinearLayout>
</ScrollView>